implements API on gallery
