# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\ApiBukuController;
+use App\Http\Controllers\Api\ApiPostController;
 use App\Http\Controllers\Api\GreetController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -22,7 +23,13 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 Route::get('/greet', [GreetController::class, 'greet']);
 
-Route::prefix('buku')->name('buku.')->group(function () {
+Route::prefix('buku')->name('api.buku.')->group(function () {
     Route::get('/', [ApiBukuController::class, 'index'])->name('index');
     Route::post('/', [ApiBukuController::class, 'store'])->name('store');
+});
+
+Route::prefix('gallery')->name('api.gallery.')->group(function () {
+    Route::get('/', [ApiPostController::class, 'getAll'])->name('index');
+    Route::post('/', [ApiPostController::class, 'store'])->name('store');
+    Route::delete('/{id}', [ApiPostController::class, 'delete'])->name('delete');
 });
